Working on updating courses list

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -281,7 +281,7 @@
               ex neque, quis facilisis tortor scelerisque vel. In ac quam finibus, pharetra mauris vel, aliquam augue...
             </p>
           </div>
- 
+
           <footer class="card-footer text-center">
             <ul class="post-info">
               <li><a href="#"><i class="fa fa-tag"></i>tags</a></li>
@@ -335,7 +335,7 @@
             <span class="card-date-day">04</span>
             <span class="card-date-month">Apr</span>
           </div>
- 
+
           <div class="card-body">
             <h3 class="card-title"><a href="blog-single-post-image.html">Blog Title</a></h3>
             <div class="card-subtitle">Nullam cursus condimentum</div>
@@ -351,7 +351,7 @@
               <li><a href="#"><i class="fa fa-comments"></i>257</a></li>
             </ul>
           </footer>
-     
+
         </article>
 
       </div>
@@ -361,7 +361,7 @@
           <header class="card-thumb">
             <img src="assets/images/blog/02.jpg" alt="blog">
           </header>
-     
+
           <div class="card-date">
             <span class="card-date-day">03</span>
             <span class="card-date-month">Apr</span>
@@ -375,7 +375,7 @@
               ex neque, quis facilisis tortor scelerisque vel. In ac quam finibus, pharetra mauris vel, aliquam augue...
             </p>
           </div>
-       
+
           <footer class="card-footer text-center">
             <ul class="post-info">
               <li><a href="#"><i class="fa fa-tag"></i>tags</a></li>
@@ -384,20 +384,20 @@
           </footer>
 
         </article>
-       
+
       </div>
-  
+
       <div class="col-md-4 mb-30">
         <article class="card">
           <header class="card-thumb">
             <img src="assets/images/blog/03.jpg" alt="blog">
           </header>
-      
+
           <div class="card-date">
             <span class="card-date-day">02</span>
             <span class="card-date-month">Apr</span>
           </div>
-          
+
           <div class="card-body">
             <h3 class="card-title"><a href="blog-single-post-image.html">Blog Title</a></h3>
             <div class="card-subtitle">Suspendisse sollicitudin nulla</div>
@@ -406,20 +406,20 @@
               ex neque, quis facilisis tortor scelerisque vel. In ac quam finibus, pharetra mauris vel, aliquam augue...
             </p>
           </div>
-       
+
           <footer class="card-footer text-center">
             <ul class="post-info">
               <li><a href="#"><i class="fa fa-tag"></i>tags</a></li>
               <li><a href="#"><i class="fa fa-comments"></i>181</a></li>
             </ul>
           </footer>
-         
+
         </article>
-    
+
       </div>
-  
+
     </div>
-   
+
   </div>
 
 </section>
@@ -679,7 +679,25 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- /.collapse-4 -->
+                        <!-- /.collapse-5 -->
+                      <div class="panel panel-default">
+                        <div class="panel-heading" role="tab" id="CECI">
+                          <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                              {{ "LM_CECI" | translate}}
+                            </a>
+                          </h4>
+                        </div>
+                        <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="CECI">
+                          <div class="panel-body">
+                            <h4><b>Anne Dewilde</b></h4>
+                            <h5>{{ "CECI_JOB" | translate }}</h5>
+                            <h5><b>{{"OBJ" | translate}}</b></h5>
+                            <p>{{"LM_CECI_text" | translate }}</p>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- /.collapse-4 -->
 
                     </div>
                     <!-- /.accordion -->
