[TRANSLATE] translation of the events

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -41,29 +41,28 @@
                         <img class="d-block w-100" src="assets/images/background/bbq.png" alt="First slide">
                         <div class="title_containter">
                             <h2 class="title_event">Barbecue SIGL</h2>
-                            <p class="subtitle_event">Conserver et renouveler le lien avec les anciens élèves, et permettre aux futurs ingénieurs d'échanger avec ceux qui les ont précédés : c'est dans cette optique qu'est organisé chaque année le BBQ SIGL, regroupant professeurs,
-                                anciens étudiants et futur diplômés.</p>
+                            <p class="subtitle_event">{{ "Sub_event1" | translate }}</p>
                         </div>
                     </div>
                     <div class="item">
                         <img class="d-block w-100" src="assets/images/background/laser.png" alt="Second slide">
                         <div class="title_containter">
                             <h2 class="title_event">Laser Game</h2>
-                            <p class="subtitle_event">A l'initiative des délégués, des événements au sein de la majeure sont organisés régulièrement (cinéma, laser game, etc.) afin de donner aux étudiants des opportunités de créer des liens au delà du cadre de l'école.</p>
+                            <p class="subtitle_event">{{ "Sub_event2" | translate }}</p>
                         </div>
                     </div>
                     <div class="item">
                         <img class="d-block w-100" src="assets/images/background/afterwork.jpg" alt="Third slide">
                         <div class="title_containter">
                             <h2 class="title_event">Afterwork SIGL</h2>
-                            <p class="subtitle_event">Pour permettre la mise en place d'une culture mettant en avant la cohésion d'équipe et le dialogue, des moments d'échange et de détente regroupant professeurs et étudiants sont organisés</p>
+                            <p class="subtitle_event">{{ "Sub_event3" | translate }}</p>
                         </div>
                     </div>
                     <div class="item">
                         <img class="d-block w-100" src="assets/images/background/disintegration.jpg" alt="Fourth slide">
                         <div class="title_containter">
-                            <h2 class="title_event">Désintégration SIGL</h2>
-                            <p class="subtitle_event">Afin de célébrer ensemble la fin des études et la réussite de leur année, une désintégration est organisée par les étudiants à la fin du cursus. Dernière destination en date : Lisbonne !</p>
+                            <h2 class="title_event">{{ "Title_event4" | translate }}</h2>
+                            <p class="subtitle_event">{{ "Sub_event4" | translate }}</p>
                         </div>
                     </div>
                 </div>
