Update: Liste des projets Promo 2021

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -518,7 +518,7 @@
                                 </span>
                             </div>
                             <div class="info">
-                                <h4 class="text-center">Web Technologies</h4>
+                                <h4 class="text-center">{{"WTT" | translate }}</h4>
                                 <p>
                                     {{"WTText" | translate}}
                                 </p>
