change IOT for IoT

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -475,7 +475,7 @@
                             <div class="info">
                                 <h4 class="text-center">IoT</h4>
                                 <p>
-                                    {{"IOTText" | translate}}
+                                    {{"IoTText" | translate}}
                                 </p>
                             </div>
                         </div>
