--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -450,17 +450,16 @@
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-4">
-                        <div class="box" style="width:100%;">
+                        <div class="box">
                             <div style="margin: 20px;" data-os-animation="fadeInDown">
                                 <span>
-                                    <img src="assets/images/assetProject/bcase.jpg" width="70" height="70" />
+                                    <img src="assets/images/assetProject/architecture.png" width="70" height="70" />
                                 </span>
                             </div>
                             <div class="info">
-                                <h4 class="text-center">{{"VIRT" | translate }}</h4>
+                                <h4 class="text-center">{{"ARCH" | translate}}</h4>
                                 <p>
-                                    {{"VIRTText" | translate}}
-
+                                    {{"ARCHText" | translate}}
                                 </p>
                             </div>
                         </div>
@@ -475,7 +474,7 @@
                             <div class="info">
                                 <h4 class="text-center">IoT</h4>
                                 <p>
-                                    {{"IoTText" | translate}}
+                                    {{"IOTText" | translate}}
                                 </p>
                             </div>
                         </div>
@@ -557,21 +556,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xs-12 col-md-4">
-                        <div class="box">
-                            <div style="margin: 20px;" data-os-animation="fadeInDown">
-                                <span>
-                                    <img src="assets/images/assetProject/architecture.png" width="70" height="70" />
-                                </span>
-                            </div>
-                            <div class="info">
-                                <h4 class="text-center">{{"ARCH" | translate}}</h4>
-                                <p>
-                                    {{"ARCHText" | translate}}
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
             <!-- /.row -->
