--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -318,7 +318,7 @@
               </span>
             </div>
             <div class="info">
-              <h4 class="text-center">IoT</h4>
+              <h4 style="text-transform: none" class="text-center">IoT</h4>
               <p>
                 {{"IOTText" | translate}}
               </p>
