[FAQ][TAB] created tab faq

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -36,6 +36,9 @@
                 <li>
                     <a class="page-scroll" href="#socials">{{'Social' | translate}}</a>
                 </li>
+                <li>                                                            
+                    <a class="page-scroll" href="#">{{'Q&A' | translate}}</a>
+                </li>                                                           
                 <li>
                     <img height="24" width="24" style="margin: 15px 0 15px 0" (click)="changeLanguage('fr')"
                         src="./assets/images/flag/France.png" />
