[SV][Projet] changer le nom du projet IOT par IoT

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -473,9 +473,9 @@
                                 </span>
                             </div>
                             <div class="info">
-                                <h4 class="text-center">IoT</h4>
+                                <h4 style="text-transform: none" class="text-center">IoT</h4>
                                 <p>
-                                    {{"IoTText" | translate}}
+                                    {{"IOTText" | translate}}
                                 </p>
                             </div>
                         </div>
