[FAQ][Forum] forum with Q&A list added

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -815,7 +815,7 @@
 
                     </div>
                     <!-- /.accordion -->
-                </div>    
+                </div>
                 <!-- /.col -->
             </div>
             <!-- /.row -->
@@ -1102,7 +1102,7 @@
         </div>
         <!-- /.container -->
     </section>
-    <!-- /.faq -->
+    <!-- /.forms -->
     <!-- download -->
 
     <section id="opportunities" class="blog white-bg">
@@ -1273,6 +1273,108 @@
             </div>
         </div>
     </section>
+
+
+  <section id="q&a">
+    <br><br><br><br>
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h2>{{'Q&A' | translate}}</h2>
+        </div>
+        <hr class="hr-title-01 hr-icon">
+      </div>
+      <form>
+        <div class="form-group">
+          <label for="login">{{'Login' | translate}}</label>
+          <input type="text" class="form-control" id="login" required>
+        </div>
+
+        <div class="form-group">
+          <label for="lastName">{{'Last Name' | translate}}</label>
+          <input type="text" class="form-control" id="lastName" required>
+        </div>
+
+        <div class="form-group">
+          <label for="mail">{{'Mail' | translate}}</label>
+          <input type="text" class="form-control" id="mail" required>
+        </div>
+
+        <div class="form-group">
+          <label for="name">{{'Name' | translate}}</label>
+          <input type="text" class="form-control" id="name" required>
+        </div>
+
+        <div class="form-group">
+          <label for="question">{{'Question' | translate}}</label>
+          <input type="text" class="form-control" id="question" required>
+        </div>
+
+        <div class="row">
+          <div class="col align-self-center text-center">
+            <a href="#" class="dark-btn">
+              <i class="#"></i> &emsp;{{"Submit" | translate}}</a>
+          </div>
+        </div>
+      </form>
+    </div>
+
+  <br><br>
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h3>{{ "Ask" | translate}} </h3>
+        </div>
+      <div class="col-md-6">
+        <div class="section-title">
+        <div class="panel-group" id="accordion21" role="tablist" aria-multiselectable="true">
+
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingTwenty1">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion21,#accordion22" href="#collapseTwenty1" aria-expanded="false" aria-controls="collapseTwenty1">
+                  {{ "Question1" | translate}}
+                </a>
+              </h4>
+            </div>
+            <div id="collapseTwenty1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwenty1">
+              <div class="panel-body">
+                <h5>{{ "Réponse1" | translate }}</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+          <div class="col-md-6">
+            <div class="section-title">
+              <div class="panel-group" id="accordion22" role="tablist" aria-multiselectable="true">
+          <!-- /.collapse-1 -->
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingTwenty2">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion21,#accordion22" href="#collapseTwenty2" aria-expanded="false" aria-controls="collapseTwenty2">
+                  {{ "Question1" | translate}}
+                </a>
+              </h4>
+            </div>
+            <div id="collapseTwenty2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwenty2">
+              <div class="panel-body">
+                <h5>{{ "Réponse1" | translate }}</h5>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+      <!-- /.accordion -->
+      </div>
+    <!-- /.col -->
+    </div>
+    <!-- /.row -->
+    </div><br><br>
+  </section>
 
     <!--
 <section id="review" class="review bg-image-3">
