--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1238,9 +1238,17 @@
                     <h2>{{'Social' | translate}}</h2>
                 </div>
                 <hr class="hr-title-01 hr-icon">
-
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-md-offset-3 text-center">
+                    <div class="card">
+                        <div class="card-title">Où nous retrouver ?</div>
+                        <div class="card-descriptiona">
+                        <a href="https://www.google.com/maps/place/14+Rue+Voltaire,+94270+Le+Kremlin-Bic%C3%AAtre/@48.8156816,2.3606721,17z/data=!3m1!4b1!4m5!3m4!1s0x47e671801ccbf7df:0xbac98bb04cd35fca!8m2!3d48.8156781!4d2.3628608">
+                            14-16 rue Voltaire, 94270 Le Kremlin-Bicêtre - KB604
+                        </a>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-md-offset-3">
                     <a class="twitter-timeline" data-height="500" href="https://twitter.com/SIGL_EPITA">Tweets by
                         SIGL_EPITA</a>
                 </div>
@@ -1254,7 +1262,6 @@
                     <a href="mailto:laboratoire.sigl@epita.fr" class="dark-btn">
                         <i class="fa fa-address-book"></i> &emsp;{{"Contact" | translate}}</a>
                 </div>
-
             </div>
         </div>
     </section>
