--- a/src/app/homepage.component.css
+++ b/src/app/homepage.component.css
@@ -786,6 +786,12 @@
     text-decoration: none
 }
 
+
+.qanda {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 .bottom-content .newsletter input {
     font-size: 16px;
     padding: 15px 10px 15px 15px;
