[SV][FAQ] Remove Answers and add 'Mail epita'

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1312,7 +1312,7 @@
       </form>
     </div>
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="section-title">
           <h3>{{ "Ask" | translate}} </h3>
@@ -1338,34 +1338,31 @@
         </div>
         </div>
       </div>
-          <div class="col-md-6">
+        <div class="col-md-6">
             <div class="section-title">
-              <div class="panel-group" id="accordion22" role="tablist" aria-multiselectable="true">
-          <!-- /.collapse-1 -->
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingTwenty2">
-              <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion21,#accordion22" href="#collapseTwenty2" aria-expanded="false" aria-controls="collapseTwenty2">
-                  {{ "Question1" | translate}}
-                </a>
-              </h4>
+                <div class="panel-group" id="accordion22" role="tablist" aria-multiselectable="true">
+                    <div class="panel panel-default">
+                        <div class="panel-heading" role="tab" id="headingTwenty2">
+                            <h4 class="panel-title">
+                                <a class="collapsed" role="button" data-toggle="collapse"
+                                    data-parent="#accordion21,#accordion22" href="#collapseTwenty2" aria-expanded="false"
+                                    aria-controls="collapseTwenty2">
+                                    {{ "Question1" | translate}}
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwenty2" class="panel-collapse collapse" role="tabpanel"
+                            aria-labelledby="headingTwenty2">
+                            <div class="panel-body">
+                                <h5>{{ "Réponse1" | translate }}</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div id="collapseTwenty2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwenty2">
-              <div class="panel-body">
-                <h5>{{ "Réponse1" | translate }}</h5>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
       </div>
-      <!-- /.accordion -->
-      </div>
-    <!-- /.col -->
     </div>
-    <!-- /.row -->
-    </div><br><br>
+    </div><br><br> -->
   </section>
 
     <!--
