[FAQ] - Ask for confirmation when user wants to and email

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -542,7 +542,7 @@
                         </div>
                     </div>
 
-                    
+
                 </div>
             </div>
             <!-- /.row -->
@@ -1281,7 +1281,7 @@
         <div class="row">
           <div class="col align-self-center text-center">
             <a href="mailto:deleguessigl@gmail.com?subject=[FAQ][SIGL] Question du site vitrine&body=Bonjour,%0D%0A%0D%0AL'étudiant {{name}} {{lastName}} ({{mail}}) vous a envoyé cette question via la FAQ du site vitrine :%0D%0A%0D%0A{{question}}
-            %0D%0A%0D%0ACordialement,%0D%0A%0D%0A-- %0D%0AFAQ site vitrine SIGL" class="dark-btn">
+            %0D%0A%0D%0ACordialement,%0D%0A%0D%0A-- %0D%0AFAQ site vitrine SIGL" onclick="if(window.confirm('Êtes-vous sûr de vouloir envoyer ce courriel ?')){window.open(this.href);} return false;" class="dark-btn">
                  &emsp;{{"Submit" | translate}}</a>
           </div>
         </div>
