--- a/src/app/home/homepage.component.html
+++ b/src/app/home/homepage.component.html
@@ -38,28 +38,28 @@
                 </ol>
                 <div class="carousel-inner img-brightness img-size" style="z-index: -1">
                     <div class="item active">
-                        <img class="d-block w-100" src="assets/images/background/bbq.png" alt="First slide">
+                        <img class="d-block w-100" src="../../assets/images/background/bbq.png" alt="First slide">
                         <div class="title_containter">
                             <h2 class="title_event">Barbecue SIGL</h2>
                             <p class="subtitle_event">{{ "Sub_event1" | translate }}</p>
                         </div>
                     </div>
                     <div class="item">
-                        <img class="d-block w-100" src="assets/images/background/laser.png" alt="Second slide">
+                        <img class="d-block w-100" src="../../assets/images/background/laser.png" alt="Second slide">
                         <div class="title_containter">
                             <h2 class="title_event">Laser Game</h2>
                             <p class="subtitle_event">{{ "Sub_event2" | translate }}</p>
                         </div>
                     </div>
                     <div class="item">
-                        <img class="d-block w-100" src="assets/images/background/afterwork.jpg" alt="Third slide">
+                        <img class="d-block w-100" src="../../assets/images/background/afterwork.jpg" alt="Third slide">
                         <div class="title_containter">
                             <h2 class="title_event">Afterwork SIGL</h2>
                             <p class="subtitle_event">{{ "Sub_event3" | translate }}</p>
                         </div>
                     </div>
                     <div class="item">
-                        <img class="d-block w-100" src="assets/images/background/disintegration.jpg" alt="Fourth slide">
+                        <img class="d-block w-100" src="../../assets/images/background/disintegration.jpg" alt="Fourth slide">
                         <div class="title_containter">
                             <h2 class="title_event">{{ "Title_event4" | translate }}</h2>
                             <p class="subtitle_event">{{ "Sub_event4" | translate }}</p>
@@ -87,10 +87,10 @@
                 <div class="main-about">
                     <div class="col-md-4 col-sm-4 col-xs-12 np">
                         <div class="img-left-01">
-                            <img src="assets/images/about/01.jpg" alt="about">
+                            <img src="../../assets/images/about/01.jpg" alt="about">
                         </div>
                         <div class="img-left-02">
-                            <img src="assets/images/about/02.jpg" alt="about">
+                            <img src="../../assets/images/about/02.jpg" alt="about">
                         </div>
                     </div>
                     <!-- /.col -->
@@ -106,7 +106,7 @@
                     <!-- /.col -->
                     <div class="col-md-4 col-sm-4 col-xs-12 np">
                         <div class="img-right">
-                            <img src="assets/images/about/03.jpg" alt="about">
+                            <img src="../../assets/images/about/03.jpg" alt="about">
                         </div>
                     </div>
                     <!-- /.col -->
