[SV][FAQ][1/2] Add the answer's page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<homepage></homepage>
+<!-- nav -->
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+  <div class="navbar-nav">
+    <a class="nav-item nav-link" routerLink="/">Home</a>
+    <a class="nav-item nav-link" routerLink="/answer"></a>
+  </div>
+</nav>
+
+<!-- main content container -->
+<div class="jumbotron">
+        <router-outlet></router-outlet>
+</div>
