--- a/src/app/answer/answer.component.html
+++ b/src/app/answer/answer.component.html
@@ -1,3 +1,30 @@
-<h1>
-    login works!
-</h1>
+<section id="q&a" class="qanda">
+  <div class="container">
+    <div class="row">
+      <div class="section-title">
+        <h2>{{'Q&A' | translate}}</h2>
+      </div>
+      <hr class="hr-title-01 hr-icon">
+    </div>
+    <form>
+      <div class="form-group">
+        <label for="login">{{'Question' | translate}} : C'est quoi ta meilleure majeure ?</label>
+      </div>
+
+
+      <div class="form-group">
+        <label for="mail">{{'Answer' | translate}}</label>
+        <input (keyup)="onMail($event)" type="text" class="form-control" id="mail" required>
+      </div>
+
+
+      <div class="row">
+        <div class="col align-self-center text-center">
+          <a href="mailto:deleguessigl@gmail.com?subject=[FAQ][SIGL] Question du site vitrine&body=Bonjour,%0D%0A%0D%0AL'étudiant {{name}} {{lastName}} ({{mail}}) vous a envoyé cette question via la FAQ du site vitrine :%0D%0A%0D%0A{{question}}
+            %0D%0A%0D%0ACordialement,%0D%0A%0D%0A-- %0D%0AFAQ site vitrine SIGL" class="dark-btn">
+            &emsp;{{"Submit" | translate}}</a>
+        </div>
+      </div>
+    </form>
+  </div>
+</section>
