Update OPCO Teacher

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -572,7 +572,7 @@
                             </div>
                             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <h4><b>Christian Fourdrinier</b></h4>
+                                    <h4><b>Christophe Andreu</b></h4>
                                     <h5>{{ "OPCO_JOB" | translate }}</h5>
                                     <h5><b>{{"OBJ" | translate}}</b></h5>
                                     <p>{{"LM_OPCO_text1" | translate}}</p>
