--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -690,7 +690,7 @@
                             </div>
                             <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <h4><b>Jean-Christophe Ferry & Thomas Cordival</b></h4>
+                                    <h4><b>Jean-Christophe Ferry</b></h4>
                                     <h5>{{ "URSI_JOB1" | translate }}</h5>
                                     <h5>{{ "URSI_JOB2" | translate }}</h5>
                                     <h5><b>{{"OBJ" | translate}}</b></h5>
@@ -851,8 +851,9 @@
                             </div>
                             <div id="collapseThirteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
-                                    <h4><b>Robin Duval</b></h4>
-                                    <h5>{{ "ACOO_JOB" | translate }}</h5>
+                                    <h4><b>Robin Duval & Mikaël Simarik</b></h4>
+                                    <h5>{{ "ACOO_JOB1" | translate }}</h5>
+                                    <h5>{{ "ACOO_JOB2" | translate }}</h5>
                                     <h5><b>{{"OBJ" | translate}}</b></h5>
                                     <p>{{"LM_ACOO_text1" | translate}}</p>
                                     <p>{{"LM_ACOO_text2" | translate}}</p>
@@ -873,7 +874,7 @@
                             <div id="collapseFourteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
                                 <div class="panel-body">
                                     <h4><b>Robin Duval</b></h4>
-                                    <h5>{{ "ACOO_JOB" | translate }}</h5>
+                                    <h5>{{ "ACOO_JOB1" | translate }}</h5>
                                     <h5><b>{{"OBJ" | translate}}</b></h5>
                                     <p>{{"LM_NLPF_text1" | translate }}</p>
                                     <p>{{"LM_NLPF_text2" | translate }}</p>
@@ -993,18 +994,18 @@
                             <div class="panel-heading" role="tab" id="headingFour">
                                 <h4 class="panel-title">
                                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1,#accordion2,#accordion3,#accordion4" href="#collapseTwenty" aria-expanded="false" aria-controls="collapseTwenty">
-                                        {{ "LM_DIGI" | translate}}
+                                        {{ "LM_SDI" | translate}}
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseTwenty" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
                                 <div class="panel-body">
                                     <h4><b>Julien Guisset</b></h4>
-                                    <h5>{{ "DIGI_JOB" | translate }}</h5>
+                                    <h5>{{ "SDI_JOB" | translate }}</h5>
                                     <h5><b>{{"OBJ" | translate}}</b></h5>
-                                    <p>{{"LM_DIGI_text1" | translate}}</p>
-                                    <p>{{"LM_DIGI_text2" | translate}}</p>
-                                    <p>{{"LM_DIGI_text3" | translate}}</p>
+                                    <p>{{"LM_SDI_text1" | translate}}</p>
+                                    <p>{{"LM_SDI_text2" | translate}}</p>
+                                    <p>{{"LM_SDI_text3" | translate}}</p>
                                 </div>
                             </div>
                         </div>
