Add a link to the intranet (top of the page)

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -47,6 +47,9 @@
                     <img height="24" width="24" style="margin: 15px 0 15px 4px" (click)="changeLanguage('en')"
                         src="./assets/images/flag/England.png" />
                 </li>
+                <li>
+                    <a class="page-scroll" href="https://new.intranet.sigl.epita.fr/">{{'Intranet'}}</a>
+                </li>
             </ul>
         </div>
     </div>
