Mise à jour des infos pour SOAR, MOAE, ACCC

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -587,19 +587,19 @@
                             <div class="panel-heading" role="tab" id="headingTwo">
                                 <h4 class="panel-title">
                                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1,#accordion2,#accordion3,#accordion4" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        {{ "LM_AMOA" | translate}}
+                                        {{ "LM_MOAE" | translate}}
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body">
                                     <h4><b>Guillaume Barbier</b></h4>
-                                    <h5>{{ "AMOA_JOB" | translate }}</h5>
+                                    <h5>{{ "MOAE_JOB" | translate }}</h5>
                                     <h5><b>{{"OBJ" | translate}}</b></h5>
-                                    <p>{{"LM_AMOA_text1" | translate}}</p>
-                                    <p>{{"LM_AMOA_text2" | translate}}</p>
-                                    <p>{{"LM_AMOA_text3" | translate}}</p>
-                                    <p>{{"LM_AMOA_text4" | translate}}</p>
+                                    <p>{{"LM_MOAE_text1" | translate}}</p>
+                                    <p>{{"LM_MOAE_text2" | translate}}</p>
+                                    <p>{{"LM_MOAE_text3" | translate}}</p>
+                                    <p>{{"LM_MOAE_text4" | translate}}</p>
                                 </div>
                             </div>
                         </div>
@@ -942,7 +942,7 @@
                             </div>
                             <div id="collapseSeventeen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <h4><b>Antoine Tallon</b></h4>
+                                    <h4><b>Jérémy Gredat</b></h4>
                                     <h5>{{ "ACCC_JOB" | translate }}</h5>
                                     <h5><b>{{"OBJ" | translate}}</b></h5>
                                     <p>{{"LM_ACCC_text1" | translate}}</p>
@@ -1197,7 +1197,7 @@
                                 <ul>
                                     <li>{{"ChefProj" | translate }}</li>
                                     <li>{{"IngQA" | translate}}</li>
-                                    <li>{{"AMOA" | translate }}</li>
+                                    <li>{{"MOAE" | translate }}</li>
                                     <li>{{"BizDev" | translate}}</li>
 
                                 </ul>
