remove Laurent Igout in MEPA teachers

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -830,9 +830,8 @@
                             </div>
                             <div id="collapseTwelve" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body">
-                                    <h4><b>François Chazal & Laurent Igout</b></h4>
+                                    <h4><b>François Chazal</b></h4>
                                     <h5>{{ "MEPA_JOB1" | translate }}</h5>
-                                    <h5>{{ "MEPA_JOB2" | translate }}</h5>
                                     <h5><b>{{"OBJ" | translate}}</b></h5>
                                     <p>{{"LM_MEPA_text1" | translate}}</p>
                                     <p>{{"LM_MEPA_text2" | translate}}</p>
