Added Design Thinking and Object Conception Project to "Our projects" section

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -541,8 +541,39 @@
                             </div>
                         </div>
                     </div>
+                    
+                    <div class="col-xs-12 col-md-4">
+                        <div class="box" style="width:100%;">
+                            <div style="margin: 20px;" data-os-animation="fadeInDown">
+                                <span>
+                                    <img src="assets/images/assetProject/design.png" width="70" height="70" />
+                                </span>
+                            </div>
+                            <div class="info">
+                                <h4 class="text-center">{{"DESIGN" | translate}}</h4>
+                                <p>
+                                    {{"DESIGNText" | translate}}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
 
 
+                    <div class="col-xs-12 col-md-4">
+                        <div class="box" style="width:100%;">
+                            <div style="margin: 20px;" data-os-animation="fadeInDown">
+                                <span>
+                                    <img src="assets/images/assetProject/acoo.png" width="70" height="70" />
+                                </span>
+                            </div>
+                            <div class="info">
+                                <h4 class="text-center">{{"ACOO" | translate}}</h4>
+                                <p>
+                                    {{"ACOOText" | translate}}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- /.row -->
